feat(hub): implement new routes to create and list in detail by id